[maven] Upgrading jdk to 11